--- a/index.Rmd
+++ b/index.Rmd
@@ -28,6 +28,25 @@ This is the website of Mathematical Foundations. We create this website  to
 
 This website is maintained by <u>Guangyuan Gao</u> and <u>Yan Cai</u>. If you have any questions, please don't hesitate to contact us via <guangyuan.gao@ruc.edu.cn> or <2017201678@ruc.edu.cn>.
 
+## ✍️ Final Exam {- #final}
+
+- Duration: 18:00-19:30 Beijing Time on 14 Jan, 2021.
+
+- Style: Open book exam; Write solutions on the exam paper (a .doc will be sent to you).
+
+- Type of Questions: Similar to the homework (no multiple choice questions).
+
+- Number of Questions: Around 10.
+
+- Requirements: Necessary calculation/proof details.
+
+- Examinable chapters: 1-6.
+
+- Most important: (Partial) Differentiation and Optimization (60%), Integration (20%). Roughly. 
+
+- Less important: Financial Mathematics (10%), Linear equations and Non-linear Equations (10%). Roughly.
+
+
 ## 🖊️ Homework {-}
 
 Homework: Exercise 6.2* (page 510) Q1, Q4, Q6, Q12, Exercise 8.1* (page 602) Q3, Q7 are due on **2020/Dec/22 (18:00 Beijing Time)**. 
