--- a/05-partial-d.Rmd
+++ b/05-partial-d.Rmd
@@ -2,6 +2,105 @@
 
 Note that *an italic title* indicates an application section which is less important than a theoretical one.
 
+## Notes{-}
+
+**Definition** A function $f$ of two variables is a rule that assigns to each ordered pair of real numbers $(x,y)$ in a set $D$ a unique real number denoted by $f(x,y)$. The set $D$ is the domain of $f$ and its range is the set of values that $f$ takes on, that is $\{f(x,y):(x,y)\in D\}$.
+
+**Remark** We often write $z=f(x,y)$ to make explicit the value taken on by $f$ at the general point $(x,y)$. The values $x$ and $y$ are independent variables and $z$ is the dependent variable.
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/illus.png")
+```
+
+**Definition** If $f$ is a function of two variables with domain $D$, then the graph of $f$ is the set of all points $(x,y,z)\in \mathbb{R}^3$ such that $z=f(x,y)$ and $(x,y) \in D$.
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/graph.png")
+```
+
+**Remark** Just as the graph of a function $f$ of one variable is a curve $C$ with equation $y=f(x)$, so the graph of a function f of two variables is a surface $S$ with equation $z=f(x,y)$. We can visualize the graph $S$ of $f$ as lying directly above or below its domain $D$ in the $xy$-plane.
+
+**Example** The graph of the **linear function** $f(x,y)=6-3x-2y.$
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/example1.png")
+```
+
+**Definition** The **level curves** of a function $f$ of two variables are curves with equations $f(x,y)=k$, where $k$ is a constant (in the range of $f$).
+
+**Remark** A level curve $f(x,y)=k$ is the set of all points in the domain of $f$ at which $f$ takes on a given value $k$. In other words, it shows where the graph of $f$ has height $k$.
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/contour.png")
+```
+
+**Example** Topographic maps of mountainous regions. 
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/mountain.png")
+```
+
+**Example** The level curves of the $f(x,y)=6-3x-2y.$
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/contour1.png")
+```
+
+**Definition** Let $f$ be a function of two variables whose domain $D$ includes points arbitrarily close to $(a,b)$. Then we say that the limit of $f(x,y)$ as $(x,y)$ approaches $(a,b)$ is $L$ and we write
+$$\underset{(x,y)\rightarrow(a,b)}{\lim}f(x,y)=L$$
+if for every number $\epsilon>0$ there is a corresponding number $\delta>0$ such that
+if $(x,y)\in D$ and $0<\sqrt{(x-a)^2+(y-b)^2}<\delta$ then $|f(x,y)-L|<\epsilon$.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/limit.png")
+```
+
+**Definition** A **polynomial function** of two variables is a sum of terms of the form $cx^my^n$, where $c$ is a constant and $m$ and $n$ are non-negative integers. A  **rational function** is a ratio of polynomials.
+
+**Definition** Let $f$ is a function of two variables $x$ and $y$. Suppose we let only $x$ vary while keeping $y$ fixed $y=b$, namely, $g(x)=f(x,b)$. If $g$ has a derivative at $a$, then we call it the **partial derivative of $f$ with respect to $x$ at $(a,b)$** and denote it by $f_x(a,b)$.
+
+**Remarks** $$f_x(a,b)=g'(a)=\underset{h\rightarrow 0}{\lim}\frac{g(a+h)-g(a)}{h}$$
+
+$$f_x(a,b)=\underset{h\rightarrow 0}{\lim}\frac{f(a+h,b)-f(a,b)}{h}$$
+
+**Notations** If $f$ is a function of two variables, its partial derivatives are functions $f_x$ and $f_y$ defined by 
+$$f_x(x,y)=\underset{h\rightarrow 0}{\lim}\frac{f(x+h,y)-f(x,y)}{h}$$
+$$f_y(x,y)=\underset{h\rightarrow 0}{\lim}\frac{f(x,y+h)-f(x,y)}{h}$$
+$$f_x(x,y)=f_x=\frac{\partial f}{\partial x}=\frac{\partial}{\partial x}f(x,y)=\frac{\partial z}{\partial x}=f_1=D_1f=D_xf$$
+
+$$f_y(x,y)=f_y=\frac{\partial f}{\partial y}=\frac{\partial}{\partial y}f(x,y)=\frac{\partial z}{\partial y}=f_2=D_2f=D_yf$$
+
+**Rules** for finding partial derivatives of $z=f(x,y)$. To find $f_x$, regard $y$ as a constant and differentiate $f(x,y)$ with respect to $x$.
+
+**Interpretations** If $f(a,b)=c$, then the point $P(a,b,c)$ lies on $S$.
+$C_1$ is the trace of $S$ in the plane $y=b$, and it is the graph of the function $g(x)=f(x,b)$. The slope of its tangent $T_1$ at $P(a,b,c)$ is $g'(a)=f_x(a,b)$. The partial derivatives $f_x(a,b)$ and $f_y(a,b)$ can be interpreted geometrically as the slopes of the tangent lines at $P(a,b,c)$ to the traces $C_1$ and $C_2$ of $S$ in the planes $y=b$ and $x=a$.
+$\partial z/\partial x$ represent the rate of change of $z$ w.r.t. $x$ when $y$ is fixed.
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/interpretation.png")
+```
+
+**Example** If $f(x,y)=4-x^2-2y^2$, find $f_x(1,1)$ and $f_y(1,1)$.
+```{r,echo=FALSE,out.width="60%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/5/example2新.png")
+```
+
+**Clairaut's Theorem** Suppose $f$ is defined on a region $D$ that contains the point $(a,b)$. If the functions $f_{xy}$ and $f_{yx}$ are both continuous on $D$, then $$f_{xy}(a,b)=f_{yx}(a,b).$$ 
+
+
+
+
+
+
+
 ## Functions of several variables
 
 **Dependent variable** A variable whose value is determined by that taken by the independent variable; in $z=f(x,y)$ the dependent variable is $z$.
